# NextCloudNotesQT

./: .gitignore  .gitmodules  CMakeLists.txt  NexcloudNotes.pro  README.md  main.cpp  mainwindow.cpp  mainwindow.h  noteswindow.cpp  noteswindow.h  noteswindow.ui
src/: main.cpp
src/common/: NextCloudNotes.cpp  NextCloudNotes.h
src/gui/: mainwindow.cpp  mainwindow.h  mainwindow.ui  noteswindow.cpp  noteswindow.h  noteswindow.ui
